--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta=charset="utf-8">
 <html>
-
+<title>유용한 사이트</title>
 <body>
 <ul>
 <h1><a href="https://www.advancedwebranking.com/html" target="_blank"title=배경화면 많이 사용하는 태그 순위지표">태그순위</a></h1>
